--- a/.github/workflows/main_bayes-credit-backend.yml
+++ b/.github/workflows/main_bayes-credit-backend.yml
@@ -26,18 +26,26 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+
       - name: Install dependencies
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Zip artifact for deployment
-        run: zip -r python-app ./*
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
         with:
           name: python-app
-          path: python-app
+          path: |
+            release.zip
+            !venv/
+      
+      - name: Remove virtual environment and dependencies
+        run: |
+          deactivate
+          rm -rf venv
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,7 +61,7 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: unzip python-app.zip
+        run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
